bug/general-table-issues * Reorganise styles somewhat * Switch to fixed layout by default * Add properties to opt out of fixed and no-wrap styles * Fix an issue where a single <tbody> child would get wrapped in another <tbody> element

--- a/less/components/table.less
+++ b/less/components/table.less
@@ -1,41 +1,20 @@
+
+
 td, th {
     padding: 0; // Browser default is 1px
 }
 
 .jdl-table {
 
+    //--------------------------------------
+    //  Basics
+    //--------------------------------------
+
     border-collapse: collapse;
     width: 100%;
 
-    &.fixed {
-        table-layout: fixed;
-    }
-
-    &.activity-table, // FIXME: Replace with .u-highlight-rows so we can delete it
-    &.multibranch-table, // FIXME: Replace with .u-highlight-rows so we can delete it
-    &.pr-table, // FIXME: Replace with .u-highlight-rows so we can delete it
-    &.u-highlight-rows {
-        tbody tr:hover {
-            cursor: pointer;
-            background-color: rgba(148, 147, 147, 0.1);
-        }
-    }
-
-    &.u-table-padding tr.jdl-table-divider, // Applies when default padding is on or not
-    tr.jdl-table-divider {
-
-        td {
-            padding: 0.5rem 0;
-        }
-
-        hr {
-            height: 1px;
-            color: @text-color;
-            background: @text-color;
-            border: none;
-            font-size: 0;
-            opacity: 0.5;
-        }
+    td, th {
+        text-align: left;
     }
 
     th {
@@ -43,13 +22,31 @@ td, th {
         font-weight: normal;
     }
 
-    th, td {
-        .text-overflow();
-        text-align: left;
+    a {
+        color: @text-color;
     }
 
-    &.u-table-padding th, // For standard tables
-    &.u-table-padding td,
+    //--------------------------------------
+    //  Util styles
+    //--------------------------------------
+
+    &.u-fixed {
+        table-layout: fixed;
+    }
+
+    // Highlight row on mouseover for selectable tables
+
+    &.u-highlight-rows {
+        tbody tr:hover {
+            cursor: pointer;
+            background-color: rgba(148, 147, 147, 0.1);
+        }
+    }
+
+    // Default padding. Applied via classname for easy removal / reuse
+
+    &.u-table-padding td, // For standard tables
+    &.u-table-padding th,
     td.u-table-padding, // apply to specific cells via className
     th.u-table-padding {
 
@@ -64,7 +61,33 @@ td, th {
         }
     }
 
-    a {
-        color: @text-color;
+    // Single-line cells, no text wrapping. Applied via classname for easy removal / reuse
+
+    &.u-single-line td,  // For standard tables
+    &.u-single-line th,
+    td.u-single-line, // apply to specific cells via className
+    th.u-single-line {
+        .text-overflow();
+    }
+
+    //--------------------------------------
+    //  Head / Body divider
+    //--------------------------------------
+
+    &.u-table-padding tr.jdl-table-divider, // Applies whether default padding is on or not
+    tr.jdl-table-divider {
+
+        td {
+            padding: 0.5rem 0;
+        }
+
+        hr {
+            height: 1px;
+            color: @text-color;
+            background: @text-color;
+            border: none;
+            font-size: 0;
+            opacity: 0.5;
+        }
     }
 }
